Responsive bug on iPhone 7 fixed.

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ html, body {
 }
 
 header {
-  position: relative;
+  position: fixed;
   width: 99%;
   height: 100px;
 
